--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 		<title>Lucbui's Site</title>
 		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
 		<script src="/node_modules/jquery/dist/jquery.js"></script>
-		<script src="/node_modules/popper.js/dist/popper.js"
+		<script src="/node_modules/popper.js/dist/popper.js"></script>
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	</head>
 	<body>
-		<div>Welcome Please!</div>
+		<div class="jumbotron">
+			<h1 class="display-3">Hello!</h1>
+			<p class="lead">Welcome to the main page. Select from the below links
+			to go to other pages in the project.</p>
+			<a class="btn btn-success" href="/doyoumatter" role="button">Do you matter?</a>
+		</div>
 	</body>
 </html>
