--- a/doyoumatter/index.html
+++ b/doyoumatter/index.html
@@ -7,11 +7,11 @@
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	</head>
 	<body>
-		<div class="container-fluid" style="width: 75%; margin-top: 25px;">
+		<div class="container-fluid" style="margin-top: 25px;">
 			<div id="matter-div" class="col-12" style="height: 100px;">
 				<h1 id="matter-text" class="display-3 text-center">Yes, you matter.</h1>
 			</div>
-			<div id="reload-div" class="col-12" style="display: none; height: 70px;">
+			<div id="reload-div" class="col-12" style="display: none; height: 70px; width: 50%; margin: auto;">
 				<div id="reload-container" class="progress"
 					style="width:0%; margin-top: 30px;">
 					<div class="progress-bar progress-bar-striped progress-bar-animated bg-success align-middle" 
@@ -32,7 +32,7 @@
 			var strings = [
 				"Yes, you matter.",
 				"Yep, still mattering.",
-				"You're mattering quite alot today.",
+				"You're mattering very much today.",
 				"I think you are indeed mattering.",
 				"The mattering is strong.",
 				"Everything indicates you do matter",
