Removed hard-coded height

--- a/doyoumatter/index.html
+++ b/doyoumatter/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container-fluid" style="margin-top: 25px;">
-			<div id="matter-div" class="col-12" style="height: 100px;">
+			<div id="matter-div" class="col-12">
 				<h1 id="matter-text" class="display-3 text-center">Yes, you matter.</h1>
 			</div>
 			<div id="reload-div" class="col-12" style="display: none; height: 70px; width: 50%; margin: auto;">
